[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.6",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
]
